Thank you page on mobile devices (I tried device 6.3'') - Bug with buttons layout

--- a/catalog/view/theme/ormary-new/stylesheet/style.css
+++ b/catalog/view/theme/ormary-new/stylesheet/style.css
@@ -2052,7 +2052,7 @@ label .required {
 
 .do_you_like .designer_goods .swiper-slide {
     height: 212px;
-    width: 150px !important;
+   /* width: 150px !important;*/
 }
 
 .do_you_like .designer_goods a.des_slider_left,
